Corrects Footer layout issue found in validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,12 +320,12 @@ footer {
     color: #f5f5f5;
 }
 
-.social-networks p {
-    display: flex;
-    font-size: 100%;
-    margin-left: 10%;
-    padding: 2%;
+.updated {
+    font-size: 125%;
+    margin: 1%;
+    padding: 5%;
     color: #f5f5f5;
+    text-align: match-parent;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
